--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get: ^4.6.6
   dio: ^5.4.0
   fluttertoast: ^8.2.4
+  flutter_native_splash: ^2.3.6
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
